--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "solutions/index.js",
   "dependencies": {
     "cors": "^2.8.4",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "package.json": "^2.0.1"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "node index.js"
   },
